--- a/configs/freeDiameter/smf.conf.in
+++ b/configs/freeDiameter/smf.conf.in
@@ -262,6 +262,7 @@ LoadExtension = "@libdir@/freeDiameter/dict_dcca_3gpp.fdx";
 #ConnectPeer = "aaa.wide.ad.jp";
 #ConnectPeer = "old.diameter.serv" { TcTimer = 60; TLS_old_method; No_SCTP; Port=3868; } ;
 ConnectPeer = "pcrf.localdomain" { ConnectTo = "127.0.0.9"; No_TLS; };
+ConnectPeer = "aaa.localdomain" { ConnectTo = "127.0.0.1"; No_TLS; };
 
 
 ##############################################################
