--- a/configs/non3gpp.yaml.in
+++ b/configs/non3gpp.yaml.in
@@ -15,22 +15,22 @@ sbi:
       cert: @build_configs_dir@/open5gs/tls/testclient.crt
 
 parameter:
-#    no_nrf: true
-#    no_scp: true
-#    no_amf: true
-#    no_smf: true
-#    no_upf: true
-#    no_ausf: true
-#    no_udm: true
-#    no_pcf: true
-#    no_nssf: true
-#    no_bsf: true
-#    no_udr: true
-#    no_mme: true
-#    no_sgwc: true
-#    no_sgwu: true
-#    no_pcrf: true
-#    no_hss: true
+   no_nrf: true
+   no_scp: true
+   no_amf: true
+   no_smf: true
+   no_upf: true
+   no_ausf: true
+   no_udm: true
+   no_pcf: true
+   no_nssf: true
+   no_bsf: true
+   no_udr: true
+   no_mme: true
+   no_sgwc: true
+   no_sgwu: true
+   no_pcrf: true
+   no_hss: true
 #    use_mongodb_change_stream: true
 
 mme:
