Add AAA server for VoWiFi feature

--- a/configs/freeDiameter/meson.build
+++ b/configs/freeDiameter/meson.build
@@ -20,6 +20,7 @@ meson.add_install_script(python3_exe, '-c',
         mkdir_p.format(freediameter_sysconfdir))
 
 freediameter_conf = '''
+    aaa.conf
     mme.conf
     hss.conf
     smf.conf
