--- a/configs/freeDiameter/aaa.conf.in
+++ b/configs/freeDiameter/aaa.conf.in
@@ -16,7 +16,7 @@
 # This must be a valid FQDN that resolves to the local host.
 # Default: hostname's FQDN
 #Identity = "aaa.koganei.freediameter.net";
-Identity = "smf.localdomain";
+Identity = "aaa.localdomain";
 
 # The Diameter Realm of this daemon.
 # Default: the domain part of Identity (after the first dot).
@@ -79,7 +79,7 @@ Realm = "localdomain";
 #ListenOn = "202.249.37.5";
 #ListenOn = "2001:200:903:2::202:1";
 #ListenOn = "fe80::21c:5ff:fe98:7d62%eth0";
-ListenOn = "127.0.0.4";
+ListenOn = "127.0.0.21";
 
 
 ##############################################################
@@ -106,7 +106,7 @@ ListenOn = "127.0.0.4";
 # Default : NO DEFAULT
 #TLS_Cred = "<x509 certif file.PEM>" , "<x509 private key file.PEM>";
 #TLS_Cred = "/etc/ssl/certs/freeDiameter.pem", "/etc/ssl/private/freeDiameter.key";
-TLS_Cred = "@sysconfdir@/open5gs/tls/smf.crt", "@sysconfdir@/open5gs/tls/smf.key";
+TLS_Cred = "@sysconfdir@/open5gs/tls/aaa.crt", "@sysconfdir@/open5gs/tls/aaa.key";
 
 # Certificate authority / trust anchors
 # The file containing the list of trusted Certificate Authorities (PEM list)
@@ -261,8 +261,7 @@ LoadExtension = "@libdir@/freeDiameter/dict_dcca_3gpp.fdx";
 # Examples:
 #ConnectPeer = "aaa.wide.ad.jp";
 #ConnectPeer = "old.diameter.serv" { TcTimer = 60; TLS_old_method; No_SCTP; Port=3868; } ;
-ConnectPeer = "pcrf.localdomain" { ConnectTo = "127.0.0.9"; No_TLS; };
-ConnectPeer = "aaa.localdomain" { ConnectTo = "127.0.0.21"; No_TLS; };
-
+ConnectPeer = "smf.localdomain" { ConnectTo = "127.0.0.4"; No_TLS; };
+ConnectPeer = "hss.localdomain" { ConnectTo = "127.0.0.8"; No_TLS; };
 
 ##############################################################
